style.scss
$mobile: 768px;
@media only screen and (min-width: $mobile) {
  .mobile-size {
   display: none;
  }
}
@media only screen and (max-width: $mobile){
  .normal-size {
    display: none;
  }
}
h1 { opacity: 0;
  font-family: Raleway, sans-serif;
  color: white;
  font-size: 4em;
  display: inline;
}
h2 {
  font-family: Raleway, sans-serif;
  color: white;
  font-size: 1em;
}
.navbar {
  position: fixed;
  top: 0;
  z-index: 6;
  width: 100%;
  background-color: black;
  border: 0;
}
.navlinks{
  color: white;
}
.nudge-up {
  margin-top: -5px;
  padding-top: 0px;
}
.herosvg {
  margin-top: -30px;
  margin-bottom: -20px;
  margin-right: -10px;
  fill: white;
}
.herotxtseparate {
  display: block;
}
.blackbg {
  background-color: black;
}
.ib {
  display: inline-block;
}
.alnctr {
  text-align: center;
}
@keyframes fade-in {
  to {opacity: 1;
  }
}
@keyframes grow-in {
  from {height: 0%;}
  to {height: 100%;}
}
.grow-first {
  animation-name: grow-in;
  animation-duration: 1s;
  animation-fill-mode: forwards;
}
.grow-second {
  animation-name: grow-in;
  animation-duration: 1s;
  animation-delay: 1s;
  animation-fill-mode: forwards;
  height: 0px;
}
.fade-last {
  animation-name: fade-in;
  animation-duration: 1s;
  animation-delay: 2s;
  animation-fill-mode: forwards;
}
.overlay::after {
  content: "";
  position:absolute;
  top:0;
  bottom:0;
  right:0;
  left:0;
  z-index: 4
}
@media only screen and (min-width: 768px) {
  .mobileheader {
    display: none;
  }
}
.overlay-desc-main {
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 2;
}
.homepage-hero-module {
    border-right: none;
    border-left: none;
    position: relative;
}
.no-video .video-container video,
.touch .video-container video {
    display: none;
}
.no-video .video-container .poster,
.touch .video-container .poster {
    display: block !important;
}
.video-container {
    position: relative;
    bottom: 0%;
    left: 0%;
    height: 100%;
    width: 100%;
    overflow: hidden;
    background: #000;
    z-index: 1;
}
.video-container .poster img {
    width: 100%;
    bottom: 0;
    position: absolute;
}
.video-container .filter {
    z-index: 100;
    position: absolute;
    background: rgba(0, 0, 0, 0.4);
    width: 100%;
}
.video-container video {
    position: absolute;
    z-index: 0;
    bottom: 0;
}
.video-container video.fillWidth {
    width: 100%;
}

